src/test/deca/syntax/invalid/missing_semicolon.deca
// Description :
//    point virgule manquante
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'int'

int x = 10
int y = 20;
